# obs-rec

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: test.yml
src/obs_rec/: __init__.py  __main__.py  bot.py  config.py  obs_client.py  video_compressor.py
tests/: test_config.py  test_package.py  test_video_compressor.py
